--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -255,8 +255,8 @@ img{
     position: absolute;
     right: 0;
     bottom: 0;
-    width: 330px;
-    height: 350px;
+    width: 37git 0px;
+    height: 400px;
 }
 
 .about_container{
