--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -608,9 +608,17 @@ img{
 @media only screen and (max-width: 768px){
     .home_img{
         width: 45%;
-        height: 40%;
-        margin-bottom: 10px;
+        height: 45%;
+        margin-bottom: 2px;
         border-radius: 20px;
         margin-right: 50px;
+    }
+}
+
+@media only screen and (min-width: 320px){
+    .home_img{
+        height: 40%;
+        width: 55%;
+        margin-bottom: 15px;
     }
 }
