--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,12 +5,6 @@
     --font-medium: 500;
 }
 
-:root{
-    --first-color: black;
-    --white-color: white;
-    --dark-color: black;
-    --text-color: black;
-}
 
 :root{
     --body-font: 'Montserrat', sans-serif;
@@ -52,9 +46,9 @@ body{
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
-    color: var(--text-color);
+    color: white;
     line-height: 1.6;
-    animation: changeColor 10s infinite;
+    animation: changeColor 20s infinite;
 }
 
 @keyframes changeColor {
@@ -91,7 +85,7 @@ ul{
 
 a{
     text-decoration: none;
-    color: var(--text-color);
+    color: black;
 }
 img{
     max-width: 100%;
@@ -106,7 +100,7 @@ img{
 .section-title{
     position: relative;
     font-size: var(--h2-font-size);
-    color: var(--dark-color);
+    color: black;
     margin: var(--mb-4) 0;
     text-align: center;
 }
@@ -120,7 +114,7 @@ img{
     right: 0;
     margin: auto;
     top: 2rem;
-    background-color: var(--first-color);
+    background-color: black;
 }
 
 .bd-grid{
@@ -138,7 +132,7 @@ img{
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    background-color: var(--first-color);
+    background-color: black;
 }
 
 .nav{
@@ -187,19 +181,19 @@ img{
 
 .nav_link{
     position: relative;
-    color: var(--dark-color);
+    color: black;
 }
 
 .nav_link:hover{
-    color: var(--first-color);
+    color:  black;
 }
 
 .nav_logo{
-    color: var(--white-color);
+    color: white;
 }
 
 .nav_toggle{
-    color: var(--white-color);
+    color: white;
     font-size: 1.5rem;
     cursor: pointer;
 }
@@ -215,7 +209,7 @@ img{
     height: .18rem;
     left: 0;
     top: 2rem;
-    background-color: var(--first-color);
+    background-color: black;
 }
 
 .home{
@@ -232,7 +226,7 @@ img{
 .home_title{
     align-self: flex-end;
     font-size: var(--big-font-size);
-    color: var(--white-color);
+    color: white;
     line-height: .7;   
 }
 
@@ -249,7 +243,7 @@ img{
 .home_scroll-link{
     writing-mode: vertical-lr;
     transform: rotate(-180deg);
-    color: var(--white-color);
+    color: white;
 }
 
 .home_img{
@@ -266,6 +260,7 @@ img{
     justify-items: center;
     row-gap: 2rem;
     text-align: center;
+    color: black;
 }
 
 .about_img {
@@ -274,7 +269,7 @@ img{
     align-items: center;
     width: 120px;
     height: 120px;
-    background-color: var(--first-color);
+    background-color: black;
     border-radius: 50%;
     overflow: hidden;
 }
@@ -287,7 +282,7 @@ img{
 
 .about_subtitle{
     font-size: var(--h2-font-size);
-    color: var(--first-color);
+    color: black;
     margin-bottom: var(--mb-1);
 }
 
@@ -307,15 +302,29 @@ img{
 }
 
 .about_social-icon:hover{
-    color: var(--first-color);
+    color: black;
+}
+.education_content {
+    color: black;
+}
+.education_title {
+    margin-bottom: -4px;
+    font-size: 22px;
 }
 
+.education_school {
+    font-weight: bold;
+}
+
+.education_year {
+    font-style: italic;
+}
 .skills_container{
     row-gap: 2rem;
 }
 
 .skills_subtitle{
-    color: var(--first-color);
+    color: black;
     margin-bottom: var(--mb-3);
 }
 
@@ -325,13 +334,13 @@ img{
     margin-right: var(--mb-2);
     margin-bottom: var(--mb-3);
     padding: .25rem .5rem;
-    background-color: var(--white-color);
+    background-color: black;
     border-radius: .25rem;
 }
 
 .skills_name:hover{
-    background-color: var(--first-color);
-    color: var(--white-color);
+    background-color: white;
+    color: black;
 }
 
 .skills_img img{
@@ -369,6 +378,11 @@ img{
     padding: 7px;
 }
 
+.certificates_description {
+    color: black;
+    text-align: center;
+}
+
 .certificates_img:hover .certificates_link{
     bottom: 0;
 }
@@ -378,18 +392,72 @@ img{
     margin-left: 20px;
 }
 
+.projects_container {
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 2rem;
+}
+
+.projects_card {
+    background-color: black;
+    border-radius: 1rem;
+    overflow: hidden;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+    transition: transform 0.3s ease;
+}
+
+.projects_card:hover {
+    transform: translateY(-8px);
+}
+
+.projects_img {
+    width: 260px;
+    height: 220px;
+    object-fit: cover;
+    margin-left: 16px;
+    margin-top:  20px;
+    border-radius: 10px;
+}
+
+.projects_content {
+    padding: 1.2rem;
+    color: white;
+}
+
+.projects_title {
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+.projects_description {
+    font-size: 0.9rem;
+    margin-bottom: 0.8rem;
+}
+
+.projects_date {
+    font-size: 0.8rem;
+    font-style: italic;
+}
+
+.projects_link {
+    color: blue;
+    font-style: italic;
+    font-size: 14px;
+}
+
 .contact_container{
     row-gap: 2rem;
 }
 
 .contact_subtitle{
     font-size: var(--normal-font-size);
-    color: var(--first-color);
+    color: black;
 }
 
 .contact_text{
     display: inline-block;
     margin-bottom: var(--mb-2);
+    color: black;
 }
 
 .contact_inputs{
@@ -402,7 +470,7 @@ img{
     width: 100%;
     padding: .8rem;
     outline: none;
-    border: 1.5px solid var(--dark-color);
+    border: 1.5px solid black;
     font-size: var(--normal-font-size);
     margin-bottom: var(--mb-4);
     border-radius: .5rem;
@@ -410,19 +478,44 @@ img{
 
 .contact_button{
     display: block;
-    background-color: var(--first-color);
-    color: var(--white-color);
-    padding: .75rem 2.5rem;
+    background-color: black;
+    color: white;
+    padding: .80rem 1.9rem;
     margin-left: auto;
     border-radius: .5rem;
     border: none;
     outline: none;
-    font-size: var(--normal-font-size);
+    font-size: 14px;
+    font-weight: bold;
     cursor: pointer;
 }
 
+.contact_button:hover {
+    background-color: white;
+    color: black;
+}
+
+.resume_button {
+    display: inline-block;
+    margin-top: 1rem;
+    text-align: center;
+    background-color: black;
+    color: white;
+    padding: 0.75rem 1.5rem;
+    border-radius: 0.5rem;
+    font-weight: 600;
+    text-decoration: none;
+    transition: background 0.3s;
+    font-size: 14px;
+}
+
+.resume_button:hover {
+    background-color: white;
+    color: black;
+}
+
 .footer{
-    background-color: var(--first-color);
+    background-color: black;
 }
 
 .footer_container{
@@ -431,17 +524,17 @@ img{
 
 .footer_title{
     font-size: var(--normal-font-size);
-    color: var(--white-color);
+    color: white;
     margin-bottom: var(--mb-2);
 }
 
 .footer_text{
-    color:var(--white-color);
+    color: white;
 }
 
 .footer_link{
     padding: .25rem 0;
-    color: var(--white-color);
+    color: white;
 }
 
 .footer_link:hover{
@@ -451,7 +544,7 @@ img{
 .footer_social{
     font-size: 1.4rem;
     margin-right: var(--mb-1);
-    color: var(--white-color);
+    color: white;
 }
 
 .footer_social:hover{
@@ -594,7 +687,6 @@ img{
 
 }
 
-
 .home_img {
     height: 40%;
     width: 55%;
@@ -614,10 +706,11 @@ img{
 
 @media screen and (min-width: 1024px) {
     .home_img {
-        height: auto;
+        height: 80%;
         width: 500px;
         margin-right: 0;
         border-radius: 100px;
+        margin-bottom: 50px;
     }
 
     .home_title {
@@ -626,5 +719,11 @@ img{
 
     .audio-button {
         margin-right: 0;
+    }
+    .nav_menu{
+        margin-left: -150px;
+    }
+    .projects_img {
+        margin-left: 30px;
     }
 }
