--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -278,7 +278,7 @@ img{
     align-items: center;
     width: 120px;
     height: 120px;
-    background-color: black;
+    background-color: white;
     border-radius: 50%;
     overflow: hidden;
 }
@@ -422,7 +422,7 @@ img{
     width: 260px;
     height: 220px;
     object-fit: cover;
-    margin-left: 22px;
+    margin-left: 26px;
     margin-top:  20px;
     border-radius: 10px;
 }
